# florest

./: .cruft.json  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
notebooks/: UserFactoryMongodbRepository.ipynb
scripts/: __init__.py
src/florest/: __init__.py  dsa.py  path_to_database.db  tmp.py
src/florest/entities/user/: __init__.py
src/florest/factory/user/: factory_user_mongo.py
src/florest/frameworks_and_drivers/: database_driver.py  web_server.py
src/florest/interface_adapters/: user_controller.py  user_presenter.py  user_repository.py
src/florest/use_cases/: create_user.py  delete_user.py  list_all_users.py  update_user.py
src/florest/use_cases/user/bulk/: create_user_bulk.py  find_user_byids_bulk.py  update_user_bulk.py
src/florest/user/drivers/database/nosql/: mongodb_driver.py
src/florest/user/entities/: __init__.py
src/florest/user/exceptions/: __init__.py
src/florest/user/factory/database/nosql/: factory_user_mongo.py
src/florest/user/interface_adapters/user/: user_presenter.py  user_repository.py
src/florest/user/use_cases/: create_user.py  delete_user.py  find_user_byemail.py  get_user.py  list_all_users.py  update_user.py
src/florest/user/use_cases/user/bulk/: create_user_bulk.py  delete_user_bulk.py  update_user_bulk.py
tests/: __init__.py  test_entitie_user.py  test_exceptions_user.py  test_florest_user_factory_database_nosql_factory_user_mongo.py  test_florest_user_interface_adapters_user_user_presenter.py  test_florest_user_use_cases_create_user.py  test_florest_user_use_cases_delete_user.py  test_florest_user_use_cases_find_user_byemail.py  test_florest_user_use_cases_get_user.py  test_florest_user_use_cases_list_all_users.py  test_florest_user_use_cases_update_user.py  test_florest_user_use_cases_user_bulk_create_user_bulk.py  test_florest_user_use_cases_user_bulk_delete_user_bulk.py  test_florest_user_use_cases_user_bulk_update_user_bulk.py  test_import.py
tmp/ticket/entities/ticket/: __init__.py  ticket_attachment.py  ticket_category.py  ticket_comment.py  ticket_priority.py  ticket_severity.py  ticket_status.py
tmp/ticket/factory/user/: factory_user_mongo.py
tmp/ticket/frameworks_and_drivers/: database_driver.py  web_server.py
tmp/ticket/interface_adapters/ticket/: __init__.py  ticket_presenter.py  ticket_repository.py
tmp/ticket/interface_adapters/user/: user_repository.py
tmp/ticket/use_cases/: create_user.py  delete_user.py  find_user_byid.py  get_user.py
tmp/ticket/use_cases/user/bulk/: delete_user_bulk.py
